--- a/stylesheets/pubology.css
+++ b/stylesheets/pubology.css
@@ -29,7 +29,7 @@ h1.page_header a {
   text-decoration: none;
 }
 
-div#navbar {
+div#navbar_wrapper {
   float: left;
   width: 8%;
   margin-left: -2em;
@@ -67,8 +67,21 @@ div#navbar li#postal_district_nolink, li#map_nolink {
   padding-left: 1.2em;
 }
 
+#portamento_container {
+  float: left; 
+  position: relative;
+}
+
+#portamento_container #navbar {
+  float: none; 
+  position: absolute;
+}
+
+#portamento_container #navbar.fixed {
+  position: fixed;
+}
+
 div#body_wrapper {
-  height: 100%;
   margin: 0;
   padding: 1em;
   position: relative;
@@ -77,7 +90,6 @@ div#body_wrapper {
 div#main_content {
   float: right;
   width: 88%;
-  height: 100%;
   padding-top: 0.8em;
 }
 
@@ -101,13 +113,14 @@ table.postal_district_pub_list th {
 div#map_canvas {
   float: right;
   width: 75%;
-  height: 100%;
+  margin-top: -3em;
 }
 
 div#pub_list {
   float: left;
   max-width: 20%;
-  height: 100%;
+  height: 90%;
+  margin-top: -2em;
 }
 
 div#pub_list ul {
