--- a/stylesheets/pubology.css
+++ b/stylesheets/pubology.css
@@ -13,8 +13,7 @@ body {
 
 div#banner {
   background-color: #ed002f;
-  margin: -1em;
-  margin-top: -2.5em;
+  margin: -2.5em -1em -1em -1em;
   padding-left: 1em;
   padding-top: 1em;
   padding-bottom: 0.1em;
