--- a/stylesheets/pubology.css
+++ b/stylesheets/pubology.css
@@ -205,6 +205,21 @@ div#pub_info table td ul {
   list-style-type: none;
 }
 
+div#pub_sources_and_references {
+  clear: both;
+  padding-top: 2em;
+}
+
+div#pub_sources_and_references table {
+  text-align: left;
+  font-family: helvetica, arial, sans-serif;
+}
+
+div#pub_sources_and_references table th, td {
+  padding: 0.5em;
+  vertical-align: top;
+}
+
 div.location_accuracy {
   font-size: 0.8em;
   font-style: italic;
